Refactor BoardBuildEngine to use local CATEGORY_IDS variable and improve question retrieval logic